# FastNumic

./: .clang-format  CMakeLists.txt
include/: arithmetic.hpp  compare.hpp  eltwise.hpp  gemm.hpp  gemv.hpp  numhelper.hpp  reduce.hpp  transpose.hpp
include/fastnum/: argminmax.hpp  arithmetic.hpp  batch_gemm.hpp  batch_gemv.hpp  batch_transpose.hpp  compare.hpp  convolution.hpp  convolution1d.hpp  eltwise.hpp  gemm.hpp  gemv.hpp  im2col.hpp  padding.hpp  pooling.hpp  reduce.hpp  resize.hpp  softmax.hpp  transpose.hpp
samples/: CMakeLists.txt
samples/cpu/: CMakeLists.txt  convolution1d_test.cpp  convolution_1x1_test.cpp  convolution_3x3_test.cpp  convolution_im2col_test.cpp  convolution_naive.hpp  dgemm_test.cpp  gemm_naive.hpp  gemm_test.cpp  gemv_test.cpp  im2col_test.cpp  matrix_utils.hpp  pooling_test.cpp  sgemm_test.cpp  transpose_naive.hpp  transpose_test.cpp
samples/cuda/: CMakeLists.txt  matrix_utils.hpp  sgemm_cuda.cpp  transpose_cuda.cpp
source/: CMakeLists.txt  arithemetic.cpp  batch_gemm.cpp  batch_gemv.cpp  batch_transpose.cpp  compare.cpp  convolution.cpp  convolution1d.cpp  convolution2d.cpp  eltwise.cpp  gemm.cpp  gemv.cpp  im2col.cpp  layout.cpp  pooling.cpp  reduce.cpp  transpose.cpp
source/cpu/: CMakeLists.txt  cpu_utils.hpp  im2col.hpp  mma_block.cpp  mma_block.hpp  mpack_block.cpp  mpack_block.hpp  pack_block.cpp  pack_block.hpp  pooling_block.cpp  pooling_block.hpp  winograd_block.cpp  winograd_block.hpp  winograd_filter_transform.hpp  winograd_wtrans.hpp
source/cpu/x86/: argmm_x86.hpp  arithmetic_x86.hpp  compare_x86.hpp  convolution1d_x86.hpp  convolution_k1x1_x86.hpp  dmma_x86.hpp  dmvma_x86.hpp  dpack_x86.hpp  dtranspose_x86.hpp  eltwise_x86.hpp  im2col_conv_x86.hpp  mma_kernel_x86.hpp  mma_x86.hpp  mmpack_kernel_x86.hpp  mpack_kernel_x86.hpp  mpack_x86.hpp  pooling_x86.hpp  reduce_x86.hpp  smma_x86.hpp  smvma_x86.hpp  spack_x86.hpp  stranspose_x86.hpp  transpose_kernel_x86.hpp  transpose_x86.hpp  vectorize_x86.hpp  vma_kernel_x86.hpp  vma_x86.hpp  winograd_dtrans_x86.hpp  winograd_kernel_x86.hpp  winograd_uvtrans_x86.hpp  winograd_wtrans_x86.hpp
source/cuda/: CMakeLists.txt  sgemm.cu  sgemm.cuh  transpose.cu  transpose.cuh
